# Souq

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: dependabot.yml  rust.yml
src/: main.rs
