[package]
name = "souq"
version = "0.0.1"
authors = ["Nikola Hristov <nikola@lightrix.dev>"]
edition = "2021"
description = "🎪 High-performant e-commerce API."
documentation = "https://docs.rs/souq"
readme = "README.md"
repository = "https://github.com/lightrix/souq"
license-file = "LICENSE"
keywords = ["e-commerce", "souq", "api"]
categories = ["web-programming", "web-programming::http-client"]

[dependencies]
