[package]
name = "souq"
version = "0.0.1"
authors = ["Nikola R. Hristov <nikola@nikolahristov.tech>"]
edition = "2021"
description = "🎪 High-performant e-commerce API."
documentation = "https://docs.rs/souq"
readme = "README.md"
repository = "https://github.com/SouqRs/souq"
license-file = "LICENSE"
keywords = ["e-commerce", "souq", "api"]
categories = ["web-programming", "web-programming::http-client"]

[dependencies]
